derive/tests/snapshots/disallow_soft_delete_and_cascade/Badge/get_all_badges.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `badge` table.
    pub fn get_all_badges<'a>(&'a self) -> impl Iterator<Item = Badge> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().badge().iter()
    }
}
