derive/tests/snapshots/disallow_soft_delete_and_cascade/Badge/get_badge_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Badge` from the `badge` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_badge_by_id<'a>(
        &'a self,
        id: impl Into<BadgeId> + Clone,
    ) -> Result<Badge, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().badge().id().find(id.clone().into().value()) {
            Some(badge) => Ok(badge),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "badge".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Badge` from the `badge` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_badge_by_id<'a>(
        &'a self,
        id: impl Into<BadgeId> + Clone,
    ) -> Result<Badge, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().badge().id().find(id.clone().into().value()) {
            Some(badge) => Ok(badge),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "badge".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
