derive/tests/snapshots/disallow_soft_delete_and_cascade/Badge/get_badges_by_member_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Badge` iterator that contains all rows in the `badge` table whose value matches the value from the single-column btree index on the `member_id` column.
    pub fn get_badges_by_member_id<'a>(
        &'a self,
        member_id: impl Into<MemberId>,
    ) -> impl Iterator<Item = Badge> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().badge().member_id().filter(member_id.into().value())
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Badge` iterator that contains all rows in the `badge` table whose value matches the value from the single-column btree index on the `member_id` column.
    pub fn get_badges_by_member_id<'a>(
        &'a self,
        member_id: impl Into<MemberId>,
    ) -> impl Iterator<Item = Badge> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().badge().member_id().filter(member_id.into().value())
    }
}
